--- a/Toupesu-2.0/android/app/src/main/AndroidManifest.xml
+++ b/Toupesu-2.0/android/app/src/main/AndroidManifest.xml
@@ -7,12 +7,11 @@
     android:versionName="1.3.5">
 
     <application
+        android:hardwareAccelerated="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
         android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true"
         tools:targetApi="29">
@@ -50,14 +49,6 @@
         </provider>
 
     </application>
-
-    <supports-screens android:anyDensity="true"
-                      android:largeScreens="true"
-                      android:normalScreens="true"
-                      android:resizeable="true"
-                      android:smallScreens="true"
-                      android:xlargeScreens="true"
-                      tools:ignore="ManifestOrder" />
 
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
